# backend

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_courses.py  0003_replace_post_tag_with_district_prefix.py
app/: __init__.py  config.py  db.py  errors.py  health.py  main.py  models.py  openapi.py  schemas.py
app/admin/: __init__.py  app.py  auth.py  courses.py  router.py  views.py
app/chat/: __init__.py  provider.py  query.py  retrieval.py  router.py  schemas.py  service.py
app/community/: __init__.py  bootstrap.py  classifications.py  comments.py  mock_data.py  posts.py  router.py  schemas.py
app/courses/: __init__.py  demo_presets.py  ranking_presets.py  recommender.py  router.py  schemas.py  service.py
app/locations/: __init__.py  bootstrap.py  importer.py  recommendations.py  router.py  schemas.py  service.py
data/: SCHEMA.md  manifest.json  recommendations.json
docs/: backend-PRD.md  frontend-ranking-api-prompt.md
frontend/: README.md  package-lock.json  package.json
scripts/: generate_recommendations.py  import_locations.py
shared/: openapi.yaml
tests/: conftest.py
tests/contract/: test_openapi_contract.py
tests/integration/: test_admin_courses.py  test_chat_api.py  test_chat_retrieval.py  test_comments_api.py  test_community_bootstrap.py  test_community_migration.py  test_courses_api.py  test_errors.py  test_health_api.py  test_location_bootstrap.py  test_location_import.py  test_locations_api.py  test_meta_api.py  (+5 more)
(+18 files in other folders)
